<resources>
    <!-- 앱 이름 -->
    <string name="app_name">mylen</string>

    <!-- 메인 페이지 텍스트  -->
    <string name="lens_empty">브랜드를 선택 후,\n검색어를 입력해 주세요!</string>
    <string name="lens_add_1">찾으시는 렌즈가 없나요?</string>
    <string name="lens_add">직접 추가</string>
    <string name="lens_add_2">하세요!</string>
    <string name="home">홈</string>
    <string name="main_1">안녕하세요</string>
    <string name="main_2">오늘도 MYLEN과 함께 하세요!</string>
    <string name="main_initial">착용 중인 렌즈가\n없습니다.</string>
    <string name="lens_case">렌즈 케이스 교체</string>
    <string name="today_clean">오늘의 세척 여부</string>
    <string name="fine_dust">미세</string>
    <string name="ultra_fine_dust">초미세</string>
    <string name="use">사용하기</string>
    <string name="open">개봉함</string>
    <string name="keep">보관함</string>
    <string name="add">추가 버튼</string>
    <string name="lens_start">착용하기</string>
    <string name="lens_end">착용 종료</string>
    <string name="openactionbar">액션바 열기</string>
    <string name="closeactionbar">액션바 닫기</string>
    <string name="liquid_type">렌즈 세척액</string>
    <string name="lens_type">콘택트 렌즈</string>

    <!--  로그인 페이지 텍스트  -->
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="id_hint">이메일 형식으로 입력해주세요</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_hint">6자리 이상 입력해주세요</string>
    <string name="sign_in_sub_text">아이디를 이메일 형식으로\n입력해주세요!</string>
    <string name="sign_in_text">아직 회원이 아니신가요?</string>

    <!-- 회원가입 페이지 텍스트  -->
    <string name="sign_up1_sub_text">아이디와 비밀번호를\n입력해주세요!</string>
    <string name="sign_up2_sub_text">이름과 생년월일을\n입력해주세요!</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="name">이름</string>
    <string name="name_hint">이름 또는 닉네임을 입력해주세요</string>
    <string name="birth">생년월일</string>
    <string name="birth_hint">생년월일을 입력해주세요</string>

    <!--  렌즈추가 페이지 텍스트  -->
    <string name="add_lens">렌즈 등록</string>
    <string name="add_lens1_sub_text">브랜드와 제품명을\n입력해주세요!</string>
    <string name="add_lens2_sub_text">수량과 착용기한을\n입력해주세요!</string>
    <string name="add_lens3_sub_text">유통기한과 개봉일을\n입력해주세요!</string>
    <string name="lens_brand">브랜드</string>
    <string name="lens_brand_hint">브랜드를 입력해주세요</string>
    <string name="lens_name">제품명</string>
    <string name="lens_name_hint">제품명를 입력해주세요</string>
    <string name="lens_quantitiy">수량</string>
    <string name="lens_quantitiy_hint">수량을 입력해주세요</string>
    <string name="lens_weardate">착용기한</string>
    <string name="lens_weardate_hint">착용기한을 입력해주세요</string>
    <string name="lens_expdate">유통기한</string>
    <string name="lens_expdate_hint">유통기한을 입력해주세요</string>
    <string name="lens_opendate">개봉일</string>
    <string name="lens_opendate_hint">개봉일을 입력해주세요</string>

    <!--  세척액추가 페이지 텍스트  -->
    <string name="add_liquid">세척액 등록</string>
    <string name="add_liquid1_sub_text">브랜드와 제품명을\n입력해주세요!</string>
    <string name="add_liquid2_sub_text">유통기한과 개봉일을\n입력해주세요!</string>
    <string name="liquid_brand">브랜드</string>
    <string name="liquid_brand_hint">브랜드를 입력해주세요</string>
    <string name="liquid_name">제품명</string>
    <string name="liquid_name_hint">제품명를 입력해주세요</string>
    <string name="liquid_expdate">유통기한</string>
    <string name="liquid_expdate_hint">유통기한을 입력해주세요</string>
    <string name="liquid_opendate">개봉일</string>
    <string name="liquid_opendate_hint">개봉일을 입력해주세요 (생략가능)</string>

    <!-- 프로필 페이지  -->
    <string name="profile">프로필</string>
    <string name="to_edit">프로필 수정</string>
    <string name="sph">SPH</string>
    <string name="sph_describe">SPH: 눈의 도수량</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="store">저장</string>

    <!-- 눈운동 페이지  -->
    <string name="eye_end">운동 완료</string>
    <string name="eye_end_1">+</string>
    <string name="eye_end_2">포인트를 획득하셨습니다</string>
    <string name="eye_end_point">point</string>
    <string name="check_report">결과 보고서 확인하기</string>
    <string name="eye_end_content_des">eye_end_oval</string>
    <string name="eye_start">시작</string>
    <string name="eye_start_title">눈 피로 회복 운동</string>
    <string name="eye_time">소요시간(분)</string>
    <string name="eye_real_time">5</string>
    <string name="eye_report">레포트</string>
    <string name="eye_point_graph">눈 운동 포인트</string>
    <string name="eye_count_graph">눈 운동 횟수</string>
    <string name="eye_point_total">총 보유 포인트</string>
    <string name="eye_point_average">하루 평균 운동 횟수</string>
    <string name="eye_count_total">총 운동 횟수</string>
    <string name="eye_add_friend">추가</string>
    <string name="eye_added_friend">추가됨</string>

    <!-- 알림 페이지  -->
    <string name="notice_set_off">OFF</string>
    <string name="notice_set_on">ON</string>

</resources>
