<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.add.AddLens">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/add_lens"
        android:textColor="@color/clear_blue"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/add_lens2_sub_text"
        android:textColor="@color/deep_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginStart="24dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/lens_quantitiy"
        android:textColor="@color/soft_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/hint_grey"
        android:ems="10"
        android:fontFamily="@font/notosans_light"
        android:hint="@string/lens_quantitiy_hint"
        android:inputType="textPersonName"
        android:textColor="@color/deep_grey"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:targetApi="lollipop"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/lens_weardate"
        android:textColor="@color/soft_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_quantity"
        android:layout_marginStart="24dp" />


    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spn_weardate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:hint="@string/lens_weardate_hint"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:met_textColorHint = "@color/hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/bt_bottom"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/gradient"
        android:textColor="#ffffff"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>