<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#00B43232"
    tools:context=".sign.SignInActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/sign_in"
        android:textColor="@color/clear_blue"
        android:textSize="33sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/sign_in_sub_text"
        android:textColor="@color/soft_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/id"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#eeeeee"
        android:ems="10"
        android:fontFamily="@font/notosans_demilight"
        android:hint="@string/id_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/notosans_demilight"
        android:layout_marginTop="48dp"
        android:text="@string/pwd"
        android:textSize="16sp"
        android:textColor="@color/soft_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/linear_grey"
        android:ems="10"
        android:fontFamily="@font/notosans_demilight"
        android:hint="@string/pwd_hint"
        android:inputType="numberPassword"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/sign_in_text"
        android:textColor="@color/soft_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/notosans_demilight"
        android:onClick="signInButtonClick"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:background="@null"
        android:fontFamily="@font/notosans_medium"
        android:onClick="signUpButtonClick"
        android:text="@string/sign_up"
        android:textColor="@color/clear_blue"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

</androidx.constraintlayout.widget.ConstraintLayout>