<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.home.add.AddLens1Activity">
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="backButtonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backspace_48dp" />

    <ImageButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="clearButtonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clear_48dp" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/add_lens"
        android:textColor="@color/clear_blue"
        android:backgroundTint="@color/hint_grey"
        android:textSize="33sp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/add_lens1_sub_text"
        android:textColor="@color/deep_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/lens_brand"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_underline_valid_success"
        android:entries="@array/lens_brand"
        android:fontFamily="@font/notosans_light"
        android:hint="@string/lens_brand_hint"
        android:includeFontPadding="false"
        android:inputType="textNoSuggestions"
        android:textColor="@color/deep_grey"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/lens_name"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_brand" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_underline_valid_success"
        android:entries="@array/lens_brand"
        android:fontFamily="@font/notosans_light"
        android:hint="@string/lens_name_hint"
        android:includeFontPadding="false"
        android:inputType="textNoSuggestions"
        android:textColor="@color/deep_grey"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/bt_bottom"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>