<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.add.AddLens">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/add_lens"
        android:textColor="@color/clear_blue"
        android:textSize="33sp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/add_lens3_sub_text"
        android:textColor="@color/deep_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginStart="24dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/lens_expdate"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="24dp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosans_demilight"
        android:includeFontPadding="false"
        android:text="@string/lens_opendate"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_expdate"
        android:layout_marginStart="24dp" />


    <Button
        android:id="@+id/bt_bottom"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:fontFamily="@font/notosans_demilight"
        android:text="@string/complete"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_expdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/et_underline_valid_success"
        android:fontFamily="@font/notosans_light"
        android:gravity="start"
        android:hint="@string/lens_expdate_hint"
        android:includeFontPadding="false"
        android:maxWidth="0dp"
        android:minHeight="0dp"
        android:textColor="@color/soft_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_opendate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/et_underline_valid_success"
        android:fontFamily="@font/notosans_light"
        android:gravity="start"
        android:hint="@string/lens_opendate_hint"
        android:includeFontPadding="false"
        android:maxWidth="0dp"
        android:minHeight="0dp"
        android:textColor="@color/soft_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>