<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:text="@string/lens_add_1"
        android:textColor="@color/deep_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lens_add"
            android:textColor="@color/clear_blue"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_medium"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@null" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lens_add_2"
            android:textColor="@color/deep_grey"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_light" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>